# digikam-yandexfotki

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  yfalbum.cpp  yfalbum.h  yfnewalbumdlg.cpp  yfnewalbumdlg.h  yfphoto.cpp  yfphoto.h  yfplugin.cpp  yfplugin.h  yftalker.cpp  yftalker.h  yfwidget.cpp  yfwidget.h  yfwindow.cpp  yfwindow.h
src/yfauth/: yfauth.cpp  yfauth.h  yfrsa.cpp  yfrsa.h
